# lpci-mirror

./: .coveragerc  .gitignore  .launchpad.yaml  .mypy.ini  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.rst  NEWS.rst  README.rst  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py  tox.ini
docs/: cli-interface.rst  conf.py  configuration.rst  index.rst  plugins.rst  release-process.rst  support.rst
lpci/: _version.py  config.py  env.py  errors.py  main.py  utils.py
lpci/commands/: clean.py  release.py  run.py  version.py
lpci/commands/tests/: __init__.py  filter-wadl.py  launchpad-wadl.xml  test_clean.py  test_release.py  test_run.py  test_version.py
lpci/plugin/: __init__.py  hookspecs.py  lib.py  manager.py
lpci/plugin/tests/: test_plugins.py
lpci/plugins/: __init__.py  plugins.py
lpci/providers/: __init__.py  _base.py  _buildd.py  _lxd.py
lpci/providers/tests/: __init__.py  test_base.py  test_buildd.py  test_lxd.py  (+1 more)
lpci/tests/: fixtures.py  test_config.py  test_env.py  test_errors.py  test_git.py  test_main.py  test_utils.py
lpcraft/: _version.py  config.py  env.py  errors.py  git.py  main.py  utils.py
lpcraft/commands/: clean.py  release.py  run.py  version.py
lpcraft/plugin/: __init__.py  hookspecs.py  lib.py  manager.py
lpcraft/plugins/: __init__.py  plugins.py  tox.py
lpcraft/providers/: __init__.py  _base.py  _buildd.py  _lxd.py
lpcraft/tests/: fixtures.py  test_config.py  test_env.py  test_errors.py  test_git.py  test_main.py  test_utils.py
snap/: snapcraft.yaml
snap/local/: sitecustomize.py
(+14 files in other folders)
