[metadata]
name = lpcraft
version = 0.0.49
description = Runner for Launchpad CI jobs
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://launchpad.net/lpcraft
author = Colin Watson
author_email = cjwatson@canonical.com
license = GPL-3.0
license_files = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    PyYAML
    craft-cli
    craft-providers
    jinja2
    pluggy
    pydantic
    python-dotenv
python_requires = >=3.8

[options.entry_points]
console_scripts =
    lpcraft = lpcraft.main:main

[options.extras_require]
docs =
    sphinx
test =
    coverage
    fixtures
    pdbpp
    pytest
    responses
    systemfixtures
    testtools

[isort]
known_first_party = lpcraft
line_length = 79
profile = black

[pydocstyle]
add_ignore = D100,D101,D102,D103,D104,D105,D106,D107
